# 6502emu

./: .clang-format  .gitignore  CMakeLists.txt
src/: codegen.cpp  codegen.h  control_flow.cpp  control_flow.h  cpu.cpp  cpu.h  emulator.cpp  emulator.h  instruction.cpp  instruction.h  jit.cpp  jit.h  main.cpp  safe_int.h  types.h
test/: test-jit.cpp  test-main.cpp  test.cpp
